2006-01-21  Callum McKenzie  <callum@spooky-possum.org>

	* gyahtzee.h: 
	* gyahtzee.c: Restore the "blank die" pixmap for selected
	dice. The toolbar selection isn't obvious enough in all
	themes. See bug #327872 for discussion.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gyahtzee.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2005-09-25  Callum McKenzie  <callum@spooky-possum.org>

	* setup.c (setup_game): GTali -> Tali in the preferences dialog
	name.

2005-09-05  Richard Hoelscher  <rah@rahga.com>

	* yahzee.h:
	* yahtzee.c (RollSelectedDice): Updates related to toggle buttons.
	* gyahtzee.h: Drop NUMBER_OF_PIXMAPS by one.
	* gyahtzee.c: Replacing "blank dice" on selection with toggle buttons.
	Remove curses comment and ngettext alternative support (see #119790).
	Added a "Roll" keyboard shortcut, "R".
	(update_roll_button_sensitivity): Insensitive when no dice selected.
	(UpdateAllDicePixmaps, DeselectAllDice): Replaced older functions that
	focused on switching to the blank pixmap.
	(key_press): No more need to fake signal calls. 
	(gnome_modify_dice): Toggle the buttons.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/sv/gtali.xml: 
	* help/C/gtali.xml:  Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gtali.xml: Bump the appversion number and update the
	screenshots.

2005-07-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c: Adjust the #include path for games-stock so that it
	compiles correctly when building outside the source tree.

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gyahtzee.c: Make ui_description readonly.

2005-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gtali.xml: 
	* yahtzee.c: Remove user-visible uses of Yahtzee: its Hasbro's
	trademark.

2005-06-28  Richard Hoelscher  <rah@rahga.com>
