@@ -1,3 +1,9 @@
+2006-02-15  Callum McKenzie  <callum@spooky-possum.org>
+
+	* yahtzee.h: Remove <gnome.h> in favour of <glib/gi18n.h>. Also
+	remove the conditional: every other game requires libintl so tali
+	can too.
+
 2006-01-21  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gyahtzee.h: 
